--- a/ResourceProcessor/src/main/resources/application.yml
+++ b/ResourceProcessor/src/main/resources/application.yml
@@ -6,3 +6,11 @@ server:
 spring:
   application:
     name: resource-processor
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
+song:
+  service:
+    base:
+      url: http://song-service:8081/api/songs/
