--- a/ResourceService/src/main/resources/application.yml
+++ b/ResourceService/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
     context-path: /api
 
 spring:
+  kafka:
+    producer:
+      bootstrap-servers: kafka:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
   servlet:
     multipart:
       max-file-size: 50MB
