--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
 
   resource-service:
     build: ResourceService
+    environment:
+      - JDBC_URL=jdbc:mysql://mysql-db:3306/resource-db?serverTimezone=UTC&createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
     ports:
       - 8080:8080
     volumes:
@@ -36,6 +38,8 @@ services:
 
   song-service:
     build: SongService
+    environment:
+      - JDBC_URL=jdbc:mysql://mysql-db:3306/resource-db?serverTimezone=UTC&createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
     ports:
       - 8081:8081
     depends_on:
